fix: #375 change iframe height to 99vh to get around cropping (#378)
* fix: use 99vh

--- a/src/components/certificateViewer.scss
+++ b/src/components/certificateViewer.scss
@@ -7,6 +7,10 @@
     display: none;
   }
 
+  iframe {
+    height: 99vh; /* dont use 100vh otherwise a second blank page appear when printing */
+  }
+  
   .decentralised-renderer {
     position: static !important;
   }
